# newstrace

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
.claude/output-styles/: engineering-direct.md
.claude/skills/update-docs/: README.md  SKILL.md  ignore.jsonl  skill.js
.github/: pull_request_template.md
.github/workflows/: publish-docs.yml  sync-draft-docs.yml  test-backend.yml  test-frontend.yml  validate-docs.yml
data/: locations.json
docs/: api-reference.md  architecture.md  changelog.md  deployment.md  getting-started.md  user-guide.md
scripts/: check-docs-required.js  publish-docs.js  sync-draft-docs.js  update-docs.sh
service/: Dockerfile  README.md  pyproject.toml
service/data/: locations.json
service/src/global_news_map/: config.py  main.py
service/src/global_news_map/api/: routes.py
service/src/global_news_map/models/: schemas.py
service/src/global_news_map/services/: game.py  locations.py  news.py
service/src/global_news_map/utils/: __init__.py  distance.py
service/tests/: test_api.py  test_distance.py  test_game.py
ui/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
ui/public/docs/: how-to-use.md
ui/src/: App.css  App.jsx
ui/src/__tests__/: HeadlineCard.test.jsx  LoadingState.test.jsx
ui/src/components/: HeadlineCard.css  HeadlineCard.jsx  HelpModal.css  HelpModal.jsx  LoadingState.css  LoadingState.jsx  LocationMarker.jsx  NewsPopup.css  NewsPopup.jsx  ThemeToggle.css  ThemeToggle.jsx  WorldMap.css  WorldMap.jsx
ui/src/contexts/: ThemeContext.jsx
(+21 files in other folders)
